--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,10 @@ RoxygenNote: 7.3.2
 URL: https://github.com/Peter-UU-2021/MicroAdds
 BugReports: https://github.com/Peter-UU-2021/MicroAdds/issues
 Imports: 
-    ggplot2
+    data.table,
+    ggplot2,
+    microbiome,
+    microbiomeutilities,
+    stringr
+Depends: 
+    tidyverse
