--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MicroAdds
 Title: Addition to AlxR
-Version: 0.0.6
+Version: 0.0.7
 Authors@R: 
     person("Peter", "Scherpenisse", , "p.scherpenisse@uu.nl", role = c("aut", "cre"))
 Description: An alternative to ps_plotbar with top per sample instead of overall top
@@ -15,6 +15,7 @@ Imports:
     ggplot2,
     microbiome,
     microbiomeutilities,
-    stringr
+    stringr,
+    phyloseq
 Depends: 
     tidyverse
